@@ -96,7 +96,7 @@
   <tr><td>Dirk Feufel</td>
       <td>Venelin Mitov</td></tr>
   <tr><td>Kjetil JD</td>
-      <td>陈进芬 (Huifeng Chen)</td></tr>
+      <td>HÛ¬ (Huifeng Chen)</td></tr>
   <tr><td>Todd Wasson</td>
       <td>Matthias Dillier</td></tr>
   <tr><td>Jose Antonio Zapata Rey</td>
@@ -111,6 +111,8 @@
       <td>Antonio Manuel Muñiz Martin</td></tr>
   <tr><td>Huibert Alblas</td>
       <td>Hitoshi Amano</td></tr>
+  <tr><td>Bryce Howard</td>
+      <td></td></tr>
       </table>
     </section>
 
