@@ -77,3 +77,5 @@ Walter Tuvell	                  Tuvell_Walter@emc.com
 Antonio Manuel Muñiz Martín     http://amunizmartin.wordpress.com
 
 Hitoshi Amano                   seijro@gmail.com
+
+Bryce Howard                    bryce.howard@allstardirectories.com
